# rusty-cube

./: Cargo.toml
src/: frag.glsl  main.rs  vert.glsl
