[package]
name = "cube"
version = "0.1.0"
authors = ["shika-blyat <abdelzighem1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
winit = "0.20"
glsl-to-spirv = "*"
rusttype = "0.5.1"
[dependencies.wgpu]
version = "0.4"
features = ["vulkan"]
